--- a/themes/classic_fancy/index.html.tmpl
+++ b/themes/classic_fancy/index.html.tmpl
@@ -3,8 +3,9 @@
     <head>
         <title><TMPL_VAR name></title>
         <meta charset="UTF-8">
-        <meta name="generator" content="<TMPL_VAR generator ESCAPE="HTML">">
         <link rel="stylesheet" href="planet.css" type="text/css">
+        <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,300,500,700' rel='stylesheet' type='text/css'>
+        <meta name="generator" content="<TMPL_VAR generator ESCAPE="HTML">">
         <TMPL_IF feedtype>
             <link rel="alternate" href="<TMPL_VAR feed ESCAPE="HTML">" title="<TMPL_VAR channel_title_plain ESCAPE="HTML">" type="application/<TMPL_VAR feedtype>+xml">
         </TMPL_IF>
