--- a/planet.css
+++ b/planet.css
@@ -1,150 +1,82 @@
-body {
-	border-right: 1px solid black;
-	margin-right: 200px;
-
-	padding-left: 20px;
-	padding-right: 20px;
+body
+{
+	margin: 0 auto;
+	width: 984px;
+	font-family: "Ubuntu Beta", UbuntuBeta, "Ubuntu", "Bitstream Vera Sans", "DejaVu Sans", Tahoma, sans-serif;
+	background: #ecebe9;
+	font-size: 13px;
+	background: url("/images/dotted-bg.png");
+	line-height: 1.5;
+	color: #333;
 }
 
-h1 {
-	margin-top: 0px;
-	padding-top: 20px;
+.clearBoth
+{
+	clear: both;
+}
 
-	font-family: "Ubuntu", sans-serif;
+
+h1
+{
+	font-size: 28px;
+	line-height: 40px;
+	margin: 0 0 8px;
 	font-weight: normal;
-	letter-spacing: -2px;
-	text-transform: lowercase;
-	text-align: right;
-
-	color: grey;
 }
 
-.admin {
-	text-align: right;
+h1.pagetitle
+{
+	margin: 64px 0 0 8px;
+	height: 138px;
+	color: #741546;
 }
 
-h2 {
-	font-family: "Ubuntu", sans-serif;
+h2
+{
+	font-size: 24px;
+	line-height: 28px;
+	margin: 8px 0 8px 0;
 	font-weight: normal;
-	color: #200080;
-
-	margin-left: -20px;
 }
 
-h3 {
-	font-family: "Ubuntu", sans-serif;
+h3
+{
+	font-size: 16px;
+	line-height: 24px;
+	margin: 0 0 8px 0;
 	font-weight: normal;
-
-	background-color: #a0c0ff;
-	border: 1px solid #5080b0;
-
-	padding: 4px;
 }
 
-h3 a {
+h4
+{
+	font-size: 12px;
+	margin: 0;
+	font-weight: normal;
+}
+
+p
+{
+	font-size: 13px;
+	margin: 0 0 1em 0;
+}
+
+a
+{
+	color: #dd4814;
 	text-decoration: none;
-	color: inherit;
 }
 
-h4 {
-	font-family: "Ubuntu", sans-serif;
-	font-weight: bold;
+a img
+{
+	border: none;
 }
 
-h4 a {
-	text-decoration: none;
-	color: inherit;
+a:hover
+{
+	text-decoration: underline;
 }
 
-img.face {
-	float: right;
-	margin-top: -3em;
-}
-
-.entry {
-	margin-bottom: 2em;
-}
-
-.entry .date {
-	font-family: "Ubuntu", sans-serif;
-	color: grey;
-}
-
-.entry .date a {
-	text-decoration: none;
-	color: inherit;
-}
-
-.sidebar {
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	width: 200px;
-
-	margin-left: 0px;
-	margin-right: 0px;
-	padding-right: 0px;
-
-	padding-top: 20px;
-	padding-left: 0px;
-
-	font-family: "Ubuntu", sans-serif;
-	font-size: 85%;
-}
-
-.sidebar h2 {
-	font-size: 110%;
-	font-weight: bold;
-	color: black;
-
-	padding-left: 5px;
-	margin-left: 0px;
-}
-
-.sidebar ul {
-	padding-left: 1em;
-	margin-left: 0px;
-
-	list-style-type: none;
-}
-
-.sidebar ul li:hover {
-	color: grey;
-}
-
-.sidebar ul li a {
-        text-decoration: none;
-}
-
-.sidebar ul li a:hover {
-        text-decoration: underline;
-}
-
-.sidebar ul li a img {
-        border: 0;
-}
-
-.sidebar p {
-	border-top: 1px solid grey;
-	margin-top: 30px;
-	padding-top: 10px;
-
-	padding-left: 5px;
-}
-
-.sidebar .message {
-    cursor: help;
-    border-bottom: 1px dashed red;
-}
-
-.sidebar a.message:hover {
-    cursor: help;
-	background-color: #ff0000;
-	color: #ffffff !important;
-	text-decoration: none !important;
-}
-
-a:hover {
-	text-decoration: underline !important;
-	color: blue !important;
+a:visited
+{
+	color: #dd4814;
 }
