--- a/themes/classic_fancy/index.html.tmpl
+++ b/themes/classic_fancy/index.html.tmpl
@@ -11,6 +11,13 @@
         </TMPL_IF>
     </head>
     <body>
+        <div id="header">
+        <div id="orangeHeader">
+        	<h1>
+        		<a href="http://planet.ubuntu.com/" title="Planet Ubuntu"><span>Planet Ubuntu</span></a>
+        	</h1>
+        </div>
+        </div>
         <h1><TMPL_VAR name></h1>
     <TMPL_VAR admin>
         <TMPL_LOOP Items>
@@ -55,24 +62,13 @@
                                                 </div>
                                             </TMPL_IF>
                                         </TMPL_LOOP>
-                                        <div class="sidebar">
-                                            <img src="images/logo.png" width="136" height="136" alt="">
-                                            <h2>Subscriptions</h2>
-                                            <ul>
-                                                <TMPL_LOOP Channels>
-                                                    <li>
-                                                        <a href="<TMPL_VAR url ESCAPE="HTML">" title="subscribe"><img src="images/feed-icon-10x10.png" alt="(feed)"></a> <a <TMPL_IF link>href="<TMPL_VAR link ESCAPE="HTML">" </TMPL_IF><TMPL_IF message>class="message" title="<TMPL_VAR message ESCAPE="HTML">"</TMPL_IF><TMPL_UNLESS message>title="<TMPL_VAR title_plain ESCAPE="HTML">"</TMPL_UNLESS>><TMPL_VAR name></a>
-                                                        </li>
-                                                    </TMPL_LOOP>
-                                                </ul>
-                                                <p>
-                                                    <strong>Last updated:</strong><br>
-                                                    <TMPL_VAR date><br>
-                                                        <em>All times are UTC.</em><br>
-                                                        <br>
-                                                        Powered by:<br>
-                                                        <a href="http://www.planetplanet.org/"><img src="images/planet.png" width="80" height="15" alt="Planet" border="0"></a>
-                                                    </p>
-                                                </div>
+                                        <p>
+                                            <strong>Last updated:</strong><br>
+                                            <TMPL_VAR date><br />
+                                            <em>All times are UTC.</em><br>
+                                            <br>
+                                            Powered by:<br>
+                                            <a href="http://www.planetplanet.org/"><img src="images/planet.png" width="80" height="15" alt="Planet" border="0"></a>
+                                        </p>
     </body>
 </html>
