Made hr thicker

--- a/themes/classic_fancy/index.html.tmpl
+++ b/themes/classic_fancy/index.html.tmpl
@@ -50,7 +50,7 @@
                                                 <p class="date">
                                                     <h3><a href="<TMPL_VAR link ESCAPE="HTML">"><TMPL_IF author>by <TMPL_VAR author ESCAPE="HTML"> at </TMPL_IF><TMPL_VAR date><TMPL_IF category> under <TMPL_VAR category></TMPL_IF></a></h3>
                                                 </p>
-                                                <hr />
+                                                <hr style="height:4px;border:none;color:#333;background-color:#333;" />
                                                 </div>
                                             </div>
                                             <TMPL_IF __LAST__>
