Changed navbar look

--- a/themes/classic_fancy/index.html.tmpl
+++ b/themes/classic_fancy/index.html.tmpl
@@ -11,10 +11,10 @@
         </TMPL_IF>
     </head>
     <body>
-        <div id="header">
+        <div background="#DD4814" id="header">
             <div id="orangeHeader">
                 <h1>
-                    <a href="http://planet.ubuntu.com/" title="<TMPL_VAR name ESCAPE="HTML">"><span><TMPL_VAR name></span></a>
+                    <a href="http://planet.ubuntu.com/" title="<TMPL_VAR name ESCAPE="HTML">"><span style="color: white;"><TMPL_VAR name></span></a>
                 </h1>
             </div>
         </div>
