--- a/themes/classic_fancy/index.html.tmpl
+++ b/themes/classic_fancy/index.html.tmpl
@@ -14,7 +14,7 @@
         <div style="background-color: #DD4814;" id="header">
             <div id="orangeHeader">
                 <h1>
-                    <a href="http://planet.ubuntu.com/" title="<TMPL_VAR name ESCAPE="HTML">"><span style="color: white;"><TMPL_VAR name></span></a>
+                    <a href title="<TMPL_VAR name ESCAPE="HTML">"><span style="color: white;"><img src="http://ubuntu-wisconsin.org/logolarge.png" height="52px" width="346px" /></span></a>
                 </h1>
             </div>
         </div>
@@ -69,5 +69,23 @@
                                             Powered by:<br>
                                             <a href="http://www.planetplanet.org/"><img src="images/planet.png" width="80" height="15" alt="Planet" border="0"></a>
                                         </p>
+        <div id="menu">
+            <p>
+                <a style="color: blue;" href="http://ubuntu-wisconsin.org/blog/">Ubuntu US Wisconsin LoCo Team Blog</a>
+                <img href="http://ubuntu-wisconsin.org/blog/feed" src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" />
+            </p>
+            <p>
+                <a style="color: blue;" href="http://anthonyrhook.com/">Anthony Hook</a>
+                <img href="http://anthonyrhook.com/feed/" src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" />
+            </p>
+            <p>
+                <a style="color: blue;" href="http://theputnams.net/mike/">Mike Putnam</a>
+                <img href="http://theputnams.net/mike/feed" src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" />
+            </p>
+            <p>
+                <a style="color: blue;" href="http://cheesehead-techblog.blogspot.com/">Ian Weisser</a>
+                <img href="http://cheesehead-techblog.blogspot.com/feeds/posts/default" src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" />
+            </p>
+        </div>
     </body>
 </html>
