--- a/themes/classic_fancy/index.html.tmpl
+++ b/themes/classic_fancy/index.html.tmpl
@@ -42,19 +42,19 @@
         <div id="menu">
             <p>
                 <a style="color: blue;" href="http://ubuntu-wisconsin.org/blog/">Ubuntu US Wisconsin LoCo Team Blog</a>
-                <img href="http://ubuntu-wisconsin.org/blog/feed" src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" />
+                <a href="http://ubuntu-wisconsin.org/blog/feed"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
             </p>
             <p>
                 <a style="color: blue;" href="http://anthonyrhook.com/">Anthony Hook</a>
-                <img href="http://anthonyrhook.com/feed/" src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" />
+                <a href="http://anthonyrhook.com/feed/"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
             </p>
             <p>
                 <a style="color: blue;" href="http://theputnams.net/mike/">Mike Putnam</a>
-                <img href="http://theputnams.net/mike/feed" src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" />
+                <a href="http://theputnams.net/mike/feed"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
             </p>
             <p>
                 <a style="color: blue;" href="http://cheesehead-techblog.blogspot.com/">Ian Weisser</a>
-                <img href="http://cheesehead-techblog.blogspot.com/feeds/posts/default" src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" />
+                <a href="http://cheesehead-techblog.blogspot.com/feeds/posts/default"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
             </p>
         </div>
     <div id="main">
