Added whole page subscription

--- a/themes/classic_fancy/index.html.tmpl
+++ b/themes/classic_fancy/index.html.tmpl
@@ -110,6 +110,10 @@
         <br>
         Powered by:<br>
         <a href="http://www.planetplanet.org/"><img src="images/planet.png" width="80" height="15" alt="Planet" border="0"></a>
+        RSS 2.0 <a href="rss20.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
+        RSS 1.0 <a href="rss10.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
+        OPML <a href="opml.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
+        Atom <a href="atom.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
     </p>
     </body>
 </html>
