--- a/themes/classic_fancy/index.html.tmpl
+++ b/themes/classic_fancy/index.html.tmpl
@@ -56,6 +56,17 @@
                 <a style="color: blue;" href="http://cheesehead-techblog.blogspot.com/">Ian Weisser</a>
                 <a href="http://cheesehead-techblog.blogspot.com/feeds/posts/default"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
             </p>
+            <p>
+                Subscribe to the planet:
+                <br />
+                RSS 2.0 <a href="rss20.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
+                <br />
+                RSS 1.0 <a href="rss10.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
+                <br />
+                OPML <a href="opml.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
+                <br />
+                Atom <a href="atom.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
+            </p>
         </div>
     <div id="main">
     <TMPL_VAR admin>
@@ -107,10 +118,6 @@
         <strong>Last updated:</strong><br>
         <TMPL_VAR date><br />
         <em>All times are UTC.</em><br>
-        RSS 2.0 <a href="rss20.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
-        RSS 1.0 <a href="rss10.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
-        OPML <a href="opml.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
-        Atom <a href="atom.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
         <br />
         Powered by:<br>
         <a href="http://www.planetplanet.org/"><img src="images/planet.png" width="80" height="15" alt="Planet" border="0"></a>
