Added Systems Announcements feed to seperately subscribe to

--- a/themes/classic_fancy/index.html.tmpl
+++ b/themes/classic_fancy/index.html.tmpl
@@ -56,6 +56,10 @@
                 <a style="color: blue;" href="http://cheesehead-techblog.blogspot.com/">Ian Weisser</a>
                 <a href="http://cheesehead-techblog.blogspot.com/feeds/posts/default"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
             </p>
+            <p>
+                <a style="color: blue;" href="http://dark-net.net/?tag=ubuntu-wisconsin">planet.ubuntu-wisconsin.org System Announcements (Thomas Ward)</a>
+                <a href="http://dark-net.net/?tag=ubuntu-wisconsin&feed=rss2"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
+            </p>
             <hr />
             <p>
                 RSS 2.0 <a href="rss20.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
