* Edited home page

--- a/themes/classic_fancy/index.html.tmpl
+++ b/themes/classic_fancy/index.html.tmpl
@@ -60,6 +60,10 @@
                 <a style="color: blue;" href="http://dark-net.net/?tag=ubuntu-wisconsin">planet.ubuntu-wisconsin.org System Announcements (Thomas Ward)</a>
                 <a href="http://dark-net.net/?tag=ubuntu-wisconsin&feed=rss2"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
             </p>
+            <p>
+                <a style="color: blue;" href="http://tsimonq2.net/blog/">Simon Quigley</a>
+                <a href="http://tsimonq2.net/blog/feed"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
+            </p>
             <hr />
             <p>
                 RSS 2.0 <a href="rss20.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
