Add Sam Klein to the home page sidebar
It was hinted at that this would be done, but it never was done and therefore was never pushed onto the site.

This was hinted at in comments on #1

--- a/themes/classic_fancy/index.html.tmpl
+++ b/themes/classic_fancy/index.html.tmpl
@@ -64,6 +64,10 @@
                 <a style="color: blue;" href="http://tsimonq2.net/blog/">Simon Quigley</a>
                 <a href="http://tsimonq2.net/blog/feed"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
             </p>
+            <p>
+                <a style="color: blue;" href="https://srukle.github.io/blog/">Sam Klein</a>
+                <a href="https://srukle.github.io/feed"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
+            </p>
             <hr />
             <p>
                 RSS 2.0 <a href="rss20.xml"><img src="http://imfreshfromtheoven.com/wp-content/plugins/social-accounts/images/icons16/rss.png" /></a>
